# OpenCAXPlus

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  OCPConfig.cmake.in  README.md  README_dev.md  clitool  clitool.bat  devtool.py  genindex.html  go.mod  index.html  objects.inv  ocp.schema.json  overview.html  packages.schema.json  packages.yml  search.html  searchindex.js
Starter/: CMakeLists.txt
Starter/BasicConsole/: App.h
Starter/FASPSolver/: App.h  Define.c  ocp.yml
Starter/M++/: App.cpp  App.h  CMakeLists.txt  PoissonProblems.cpp
Starter/M++/src/: Main.C
Toolkit/M++/: CMakeLists.txt  README.md
Toolkit/M++/conf/: m++conf
Toolkit/M++/src/: Cell.C  Discretization.C  FaceElement.h  Sparse.C  m++.h
cli/: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  main.go
cli/cmd/: app.go  appBuild.go  appCreate.go  appRun.go  build.go  clean.go  configure.go  create.go  createLifecycle.go  createStarter.go  createTool.go  download.go  findSDK.go  findSDK_linux.go  findSDK_unix.go  findSDK_windows.go  get.go  install.go  main.go  pack.go  plugin.go  root.go  sdk.go  sdkBuild.go  sdkTest.go  test.go  tool.go  update.go
cli/pkg/: app.go  build.go  clean.go  common.go  configure.go  copy.go  download.go  findFolder.go  get.go  getFlag.go  pack.go  packages.go  sdk.go  test.go  update.go  utils.go  yaml_ocp.go  yaml_packages.go
cli/pkg/app/: app.go  build.go  common.go  create.go
cli/pkg/plugin/: plugin.go
cli/pkg/sdk/: sdk.go
cli/pkg/tool/: tool.go
framework/interface/: CMakeLists.txt  InterfaceConfig.cmake.in  README.md  README_dev.md  common.h
framework/interface/backend/: CMakeLists.txt  csr.h  log.h  solver.h  vec.h
framework/interface/frontend/: CMakeLists.txt
framework/interface/ocp/: common.h
framework/lifecycle/: CMakeLists.txt  README.md
framework/lifecycle/BasicConsole/: dummy.c
framework/lifecycle/CAE_Static_Console/: CMakeLists.txt  dummy.c  global.h  main.c  main.h
framework/lifecycle/Console/: CMakeLists.txt  console.h  main.c
framework/lifecycle/Custom_Console/: CMakeLists.txt  main.c
framework/lifecycle/base_console/: CMakeLists.txt  main.c
framework/lifecycle/basic/: CMakeLists.txt  console.h  dummy.c
framework/lifecycle/basic_console/: main.c
framework/lifecycle/basic_console_vtk/: CMakeLists.txt  main.c
framework/lifecycle/basic_vtk/: CMakeLists.txt
lifecycle/BasicConsole/: CMakeLists.txt  console.h  dummy.c  main.c
scripts/: CMakeLists.txt  CMakePresets.json  setvars.sh
scripts/deb/: postinst  postrm  preinst  prerm
scripts/linux/: distro_version.sh  install.sh  publish_cli.sh  publish_sdk.sh  publish_sh.sh  publish_toolkit.sh
starter/: CMakeLists.txt  README.md  index.html
starter/BasicConsole/: App.cpp  App.h  CMakeLists.txt  CMakePresets.json  Define.cpp
starter/CAE_Static_Console/: All.cpp  CMakeLists.txt  InputRead.cpp
starter/FASPSolver/: App.c  CMakeLists.txt  CMakePresets.json  fasp.c
starter/M++/: App.cpp  CMakeLists.txt  CMakePresets.json
starter/M++/conf/: elasticity.conf  elastoplasticity.conf  m++conf  poisson.conf  telasticity.conf  telastoplasticity.conf
starter/M++/src/: Define.cpp  Main.C  Poisson.C
starter/ai4pde/: Darcy_Rand.py  Readme.txt  utils.py
starter/basic_console/: CMakeLists.txt  README.md  app.cpp
starter/basic_gui/: CMakeLists.txt  CMakePresets.json  app.cpp  app.h  define.cpp
starter/fasp_solver/: CMakeLists.txt  app.c  app.h  define.c
starter/fengsim/: .gitignore  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  FENGSim.pro  LD.sh  MainWindow.cpp  MainWindow.h  PluginInterface.h  qcustomplot.h  vtkocc.h
starter/fengsim-cxx/: .gitignore  AboutDialog.cpp  AboutDialog.ui  CMakeLists.txt  CMakePresets.json  FENGSim.pro  LD.sh  Main.cpp  MainWindow.cpp  MainWindow.ui  qcustomplot.cpp
starter/fengsim-cxx/AdditiveManufacturing/: AMConfig.cpp  AMConfig.h  AMThread2.cpp  AMThread2.h  AdditiveManufacturingDockWidget.cpp  AdditiveManufacturingDockWidget.h  am.pri
starter/fengsim-cxx/CAD/: CADDockWidget.h  OCCWidget.cpp  PhysicsDockWidget.h  Primitive.cpp  Primitive.h
starter/fengsim-cxx/FEM/: CMakeLists.txt  FEMDockWidget.cpp  FEMDockWidget.h  FEMWindow.h  fem.pri
starter/fengsim-cxx/Machining/: CMakeLists.txt  MachiningDockWidget.cpp  MachiningDockWidget.h  MachiningThread2.cpp  MachiningThread2.h  MakeTools.cpp  machining.pri
starter/fengsim-cxx/Measure/: MeasureDockWidget.cpp  MeasureICP.cpp  MeasureThread1.cpp  MeasureThread1.h  MeasureThread3.h  Registration.cpp  example2.cpp  ls.cpp  ls.h  measure.pri
starter/fengsim-cxx/Mesh/: MeshDockWidget.cpp  MeshDockWidget.h
starter/fengsim-cxx/Mesquite/: test_laplacian_smoothing.cpp  test_wrapper.cpp
starter/fengsim-cxx/OCPoro/: CMakeLists.txt  OCPoroDockWidget.h  ocporo.pri
starter/fengsim-cxx/PluginTemplate/: Plugin.h  plugin.pri
starter/fengsim-cxx/StatisticalProcessControl/: spc.pri
starter/fengsim-cxx/Transport/: CMakeLists.txt  TransportDockWidget.cpp  TransportDockWidget.ui  data_analyze.h
starter/fengsim-cxx/Visual/: VTKWidget.cpp  VTKWidget.h
starter/m++/: App.cpp  App.h  CMakeLists.txt  CMakePresets.json  Define.cpp  Poisson.cpp  Poisson.h  PoissonProblems.cpp  PoissonProblems.h
starter/oce/: CMakeLists.txt  app.cpp
starter/vtk/: CMakeLists.txt  app.cpp  app.h  define.cpp
toolkit/: CMakeLists.txt  README.md  index.html
toolkit/M++/: .gitignore  CMakeLists.txt
toolkit/OCE/: .gitignore  CMakeLists.txt
toolkit/Qt/: .gitignore  CMakeLists.txt
toolkit/VTK/: .gitignore  CMakeLists.txt
toolkit/backend/: CMakeLists.txt
toolkit/default_log/: CMakeLists.txt  log.h
toolkit/faspsolver/: .gitignore  CMakeLists.txt  index.html  solver.c  solver.h
toolkit/frontend/: CMakeLists.txt
toolkit/gmsh/: .gitignore  CMakeLists.txt
toolkit/lapack/: .gitignore  CMakeLists.txt
toolkit/ocplog/: CMakeLists.txt  log.c  log.h
toolkit/ocpparam/: CMakeLists.txt  parameter.c  parameter.h
toolkit/opencascade/: .gitignore  CMakeLists.txt
toolkit/parmetis/: CMakeLists.txt
toolkit/spdlog/: CMakeLists.txt  README.md  log.cpp  log.h
(+256 files in other folders)
