add_subdirectory(ocplog)
add_subdirectory(ocpparam)
add_subdirectory(faspsolver)
add_subdirectory(M++)
add_subdirectory(spdlog)

add_subdirectory(lapack)
add_subdirectory(gmsh)

add_subdirectory(Qt)
add_subdirectory(VTK)
add_subdirectory(OCE)

add_subdirectory(pugixml)
add_subdirectory(petsc)
add_subdirectory(hdf5)
# The following commented could be configured using petsc
# add_subdirectory(parmetis)
add_subdirectory(basix)
add_subdirectory(ffcx)
add_subdirectory(dolfinx)